--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
     <meta name="viewport" content="initial-scale=1.0">
     <meta property="og:title" content="McQueen - OnePage React" />
     <meta property="og:url" content="https://strelicja.github.io/McQueen/#/" />
-    <meta property="og:type" content="image" />
-    <meta property="og:image:width" content="400" />
-    <meta property="og:image:height" content="300" />
-    <meta property="og:image" content='http://4.bp.blogspot.com/-HxoEqfSV0KI/UWxysE-BcHI/AAAAAAAAJxk/4OxCzfzFdUY/s1600/AdorningTheQueen.jpg' />
+    <meta property="og:image" content='img/wkjs1Ur.jpg' />
     <link href="https://fonts.googleapis.com/css?family=Sacramento&amp;subset=latin-ext" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
